# bitpacking

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  test.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
simdcomp/: bitpackingbenchmark
simdcomp/src/: simdbitpacking.c
src/: avx2.rs  bitpacker1x.rs  bitpacker1x_simple.rs  bitpacker2x.rs  bitpacker4x.rs  bitpacker4x_simple.rs  bitpacker8x.rs  bitpacking_bench.rs  lib.rs  macros.rs  macros_simple.rs  scalar.rs  sse3.rs  tests.rs
src/avx2/: mod.rs
src/avxpacking/: avxpacking-codegen.py  generated.rs  mod.rs
src/scalar/: mod.rs
src/simdcomp/: generate-rust.py  generated.rs  mod.rs
src/sse3/: mod.rs
