[package]
name = "bitpacking"
version = "0.8.3"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["integer", "compression", "bitpacking"]
description = "Fast integer compression/decompression via SIMD bit-packing. Port of simdcomp to rust."
edition = "2018"

[dependencies]
crunchy = "0.2"

[dev-dependencies]
rand = "0.8"
criterion = "0.4"
proptest = "1.0.0"

[features]
bitpacker1x = []
bitpacker4x = []
bitpacker8x = []
default = ["bitpacker1x", "bitpacker4x", "bitpacker8x"]

[[bench]]
name = "bitpacking_bench"
path = "src/bitpacking_bench.rs"
harness = false
